@@ -208,7 +208,7 @@ sub nlp_match {
 
 # Register Plugins
 &SimBot::plugin_register(plugin_id   => "roll",
-						 plugin_desc => "Rolls dice. You can specify how many dice, and how many sides, in the format 3D6.",
+						 plugin_help => "Rolls dice. You can specify how many dice, and how many sides, in the format 3D6.",
 
 						 event_plugin_call => \&roll_dice,
 
@@ -229,7 +229,7 @@ sub nlp_match {
 						 );
 
 &SimBot::plugin_register(plugin_id   => "flip",
-						 plugin_desc => "Flips a coin.",
+						 plugin_help => "Flips a coin.",
 
 						 event_plugin_call => \&flip_coin,
 
@@ -247,6 +247,6 @@ sub nlp_match {
 						 );
 
 &SimBot::plugin_register(plugin_id   => "rps",
-						 plugin_desc => "Pick rock, paper or scissors.",
+						 plugin_help => "Pick rock, paper or scissors.",
 						 event_plugin_call => \&rps_shoot,
 						 );
